Fix image not centered in Item View on Mobile in IE11 #2994

--- a/src/definitions/views/item.less
+++ b/src/definitions/views/item.less
@@ -358,13 +358,11 @@
     flex-direction: column;
     margin: @mobileItemSpacing 0em;
   }
-  .ui.items > .item > .image {
+  .ui.items > .item > .image,
+  .ui.items > .item > .image > img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
-  .ui.items > .item > .image,
-  .ui.items > .item > .image > img {
     max-width: 100% !important;
     width: @mobileImageWidth !important;
     max-height: @mobileImageMaxHeight !important;
